--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         </a>
         <div class="profile_box">
           <p>민음사 홈페이지 리뉴얼</p>
+          <p>기여도 100% / 개인작업물</p>
         </div>
       </article>
       <article>
@@ -139,6 +140,7 @@
         </a>
         <div class="profile_box">
           <p>황금가지 홈페이지 리뉴얼</p>
+          <p>기여도 100% / 개인작업물</p>
         </div>
       </article>
       <article>
@@ -147,6 +149,7 @@
         </a>
         <div class="profile_box">
           <p>서울교통공사 홈페이지 리뉴얼</p>
+          <p>기여도 100% / 개인작업물</p>
         </div>
       </article>
       <article>
@@ -155,6 +158,7 @@
         </a>
         <div class="profile_box">
           <p>세븐일레븐 홈페이지 리뉴얼</p>
+          <p>기여도 60%(팀장) / 팀작업물</p>
         </div>
       </article>
     </div>
