--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <div class="profile_box">
           <p>민음사 홈페이지 리뉴얼</p>
           <p>기여도 100% / 개인작업물</p>
+          <p>고정형 페이지</p>
         </div>
       </article>
       <article>
@@ -144,6 +145,7 @@
         <div class="profile_box">
           <p>황금가지 홈페이지 리뉴얼</p>
           <p>기여도 100% / 개인작업물</p>
+          <p>고정형 페이지</p>
         </div>
       </article>
       <article>
@@ -153,6 +155,7 @@
         <div class="profile_box">
           <p>서울교통공사 홈페이지 리뉴얼</p>
           <p>기여도 100% / 개인작업물</p>
+          <p>반응형 페이지</p>
         </div>
       </article>
       <article>
@@ -162,6 +165,7 @@
         <div class="profile_box">
           <p>세븐일레븐 홈페이지 리뉴얼</p>
           <p>기여도 60%(팀장) / 팀작업물</p>
+          <p>고정형 페이지</p>
         </div>
       </article>
     </div>
