--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>차수경 자기소개 홈페이지</title>
+  <title>차수경 자기소개 홈페이지(ver_1)</title>
   <link rel="icon" href="img/favicon.ico">
 
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
-
-
+``<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/header.css" rel="stylesheet">
   <link href="css/main1.css" rel="stylesheet">
