--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>차수경 자기소개 홈페이지</title>
   <link rel="icon" href="img/favicon.ico">
 
-``<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/header.css" rel="stylesheet">
   <link href="css/main1.css" rel="stylesheet">
