--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="main1">
       <p class="title1">ABOUT ME</p>
       <article class="box">
-        <img class="profile" src="img/profile.png" alt="프로필이미지">
+        <img class="profile" src="img/profile.jpg" alt="프로필이미지">
         <div class="txt">
           <p class="greeting">
             안녕하세요. 웹 퍼블리셔 차수경입니다.
